fixed adaptive in header

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -142,7 +142,7 @@
 .menu-btn__line{
     height: 5px;
     width: 50px;
-    background-color: rgba(0, 119, 255, 0.589);
+    background-color: $blue;
     margin-bottom: 10px;
 }
 .header__location{
