--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -102,8 +102,8 @@ ul, li{
     display: inline-block;
     padding: 0 0 0 5px;
     margin: -15px 0 0 0;
-    background: rgba(#1C2121, .20);
-    border-radius: 20px;
+    background: rgba(28,33,33,0.7);
+    border-radius: 5px;
 }
 .descr__head{
     font-weight: 800;
