--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,6 +1,9 @@
 .footer{
     text-align: center;
     padding: 285px 0 34px;
+    img{
+        width: 150px;
+    }
 }
 .footer__copy{
     padding: 27px 0 0 0;
