--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -180,6 +180,9 @@
     left: 210px;
     bottom: 30px;
     z-index: 3;
+    img{
+        width: 30px;
+    }
 }
 .line-animation{
     stroke-dashoffset: 600;
