--- a/app/scss/_relax.scss
+++ b/app/scss/_relax.scss
@@ -79,6 +79,9 @@
 .relax__arrows{
     padding: 40px 0;
     text-align: center;
+    img{
+        width: 30px;
+    }
 }
 .relax-slider__btn {
     padding: 0 0 270px 0;
