--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,5 +1,9 @@
 .wrapper {
-    
+    footer{
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+    }
 }
 .page {
     position: absolute;
@@ -23,15 +27,13 @@
     background: url(../img/about/m_1.jpg) no-repeat;
     background-size: 100%;
 }
-.parallax__aqua__2 {
-    z-index: 1;
-    background: url(../img/about/m_2.png) bottom right no-repeat;
-    background-size: 35%;
-}
 .parallax__aqua__3 {
-    z-index: 1;
-    background: url(../img/about/m_3.png) left bottom no-repeat;
-    background-size: 85%;
+    background: url(../img/about/downicon.png)top center no-repeat;
+    z-index: 3;
+    position: fixed;
+    top: 70px;
+    left: -20px;
+    background-size: 10%;
 }
 .parallax__fog {
     background: url(../img/about/fog_1.png) bottom no-repeat;
@@ -75,19 +77,4 @@
         margin-bottom: 20px;
     }
 }
-.logo-about{
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px 0 34px;
-    img{
-        width: 100px;
-    }
-}
-.footer__copy{
-    padding: 27px 0 0 0;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 14px;
-    opacity: 0.5;
-    letter-spacing: 1.5px;
-}
+
