--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,23 +1,36 @@
 .footer{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     margin-top: 120px;
     padding: 5px 0 5px;
-    background-color: rgba(142, 142, 144, 0.103);;
-    img{
-        width: 100px;
-    }
+    background-color: rgba(142, 142, 144, 0.103);
     a{
-        text-transform: uppercase;
-        padding-right: 10px;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 300;
         &:hover{
             color: $blue;
             transition: .3s;
+            transform: scale(1.1);
         }
     }
+    a:first-child{
+        padding-right: 30px;
+    }
+}
+.footer__logo{
+    padding-right: 106px;
+    img{
+        width: 100px;
+    }
+}
+.footer-item{
+    padding-left: 106px;
 }
 .footer__cop{
+    margin: 0 auto;
+    text-transform: uppercase;
     font-weight: 300;
     font-size: 12px;
     opacity: 0.5;
