--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -10,9 +10,9 @@
 /*--profile start here--*/
 h2 {
    font-size: 3em;
-    color: #ffffff;
+   background-color: rgba(142, 142, 144, 0.103);
     text-align: center;
-    font-weight: 300;
+    font-weight: 500;
     text-transform: uppercase;
 }
 ::-webkit-input{
@@ -20,7 +20,38 @@ h2 {
 }
 
 .contact-form{
-    padding: 3em;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 320%;
+    left: 50%;
+    display: none;
+    background-color: rgba(2, 12, 22, 0.301);
+    padding: 4em;
+    backdrop-filter: blur(50px);
+    border: 1px solid rgba(255, 255, 255, 0.52);
+}
+.form-close{
+    cursor: pointer;
+}
+.form-close:before{
+    content:'';
+    background-color: $blue;
+    position: absolute;
+    height: 3px;
+    width: 35px;
+    top: -25px;
+    right: -51px;
+    transform: rotate(-45deg);
+}
+.form-close:after{
+    content:'';
+    background-color: $blue;
+    position: absolute;
+    height: 3px;
+    width: 35px;
+    top: -25px;
+    right: -51px;
+    transform: rotate(45deg);
 }
 .styled-input.agile-styled-input-top {
     margin-top: 0;
