--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -16,6 +16,7 @@ body.lock{
     width: 100%;
     height: 100%;
     background-color: rgba(142, 142, 144, 0.103);
+    backdrop-filter: blur(20px);
     z-index: 2;
 }
 .header-wrap__body {
@@ -30,7 +31,7 @@ body.lock{
 .logo{
     z-index: 3;
     img{
-        width: 100px;
+        max-width: 100px;
     }
     &:hover{
         transform: scale(1.1);
@@ -111,32 +112,59 @@ body.lock{
     width: 100%;
     height: 100%;
     background-color: rgba(3, 24, 92, 0.877);
-    padding: 220px 10px 50px 306px;
+    backdrop-filter: blur(10px);
+    padding: 221px 10px 50px 537px;
     transition: all .6s ease 0s;
     a{
         color: #fff;
     }
     span{
-        padding-left: 15px;
-        border-left: 1px solid #fff;
+        padding-left: 50px;
+        border-left: 1px solid rgba(255, 255, 255, 0.7);
         display: block;
         font-size: 60px;
         line-height: 14px;
         letter-spacing: 3px;
         font-weight: 800;
-        line-height: 1.5;
+        line-height: 2;
     }
 }
 .header__list li{
     &:hover{
-        transform: scale(1.3);
+        transform: scale(1.1);
         transition: .5s;
+    }
+}
+.sub-header__list li a{
+    &:hover{
+        transform: scale(1.1);
+        transition: .5s;
+    }
+}
+.header__list li{
+    &:hover .sub-header__list{
+        display: block;
     }
 }
 .header__list {
     display: inline-block;
     position: relative;
     z-index: 2;
+}
+.sub-header__list{
+    display: none;
+    position: absolute;
+    left: 230px;
+    top: -165px;
+    padding: 0px 100px 50px 260px;
+}
+.sub-header__list li{
+    border-left: 1px solid rgba(255, 255, 255, 0.7);
+    font-size: 28px;
+    letter-spacing: 3px;
+    font-weight: 400;
+    line-height: 2;
+    padding-left: 50px;
 }
 .header{ 
     position: relative;
@@ -155,6 +183,7 @@ body.lock{
     }
 }
 .header__location{
+    opacity: 0.7;
     padding-left: 20px;
     padding-top: 50px;
     font-size: 38px;
