--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -30,6 +30,13 @@ h2 {
     backdrop-filter: blur(50px);
     border: 1px solid rgba(255, 255, 255, 0.52);
 }
+//2
+.contact-forms{
+    background-color: rgba(2, 12, 22, 0.301);
+    padding: 3em;
+    backdrop-filter: blur(50px);
+    border: 1px solid rgba(255, 255, 255, 0.52);
+}
 .form-close{
     cursor: pointer;
 }
@@ -85,6 +92,17 @@ h2 {
     background: none;
     outline: none;
 }
+//2
+.contact-forms input[type="text"],.contact-forms input[type="email"],.contact-forms textarea{
+    font-size: .9em;
+    color: #999999;
+    padding: 0.5em 1em;
+    border: 0;
+    width: 88%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    background: none;
+    outline: none;
+}
 select{
     font-size: .9em;
     color: #999999;
@@ -111,6 +129,11 @@ select{
     color: rgb(255, 0, 0);
 }
 .contact-form textarea { 
+	min-height: 22em;
+    resize: none;
+} 
+//2
+.contact-forms textarea { 
 	min-height: 22em;
     resize: none;
 } 
@@ -205,6 +228,9 @@ select{
 @media(max-width:568px){
 	.contact-form {
 		padding: 2em;
+    }
+    .contact-forms {
+		padding: 2em;
 	}
 	.contact-left {
 		float: none;
@@ -232,6 +258,19 @@ select{
 	}
 	.contact-form input[type="submit"] {
 		padding: .8em 3em;
+    }
+    //2
+    .contact-forms textarea {
+		min-height: 16em;
+	}
+	.styled-input {
+		margin: 2em 0 1em;
+	}
+	.contact-forms input[type="text"], .contact-forms input[type="email"], .contact-forms textarea {
+		width: 92%;
+	}
+	.contact-forms input[type="submit"] {
+		padding: .8em 3em;
 	}
 }
 @media(max-width:414px){
@@ -242,10 +281,18 @@ select{
 @media(max-width:375px){
 	.contact-form textarea {
 		min-height: 10em;
+    }
+    //2
+    .contact-forms textarea {
+		min-height: 10em;
 	}
 }
 @media(max-width:320px){
 	.contact-form input[type="text"], .contact-form input[type="email"], .contact-form textarea {
+		width: 86%;
+    }
+    //2
+    .contact-forms input[type="text"], .contact-forms input[type="email"], .contact-forms textarea {
 		width: 86%;
 	}
 }
