--- a/app/scss/_sport.scss
+++ b/app/scss/_sport.scss
@@ -59,15 +59,17 @@
 }
 .sport-box__inner{
     min-height: 750px;
-    background: rgba(#1C2121, .80);
+    background-color: rgba(#1C2121, .80);
     position: relative;
     left: 0;
     bottom: 0;
     transition: all .5s;
     &:hover{
-        background: rgba(#1C2121, .30);
+        background-color: rgba(#1C2121, .30);
+        transition: all .5s;
         .btn-box{
             display: block;
+            transition: all .5s;
         }
     }
 }
