--- a/app/scss/_travel.scss
+++ b/app/scss/_travel.scss
@@ -1,4 +1,11 @@
 .travel{
+    padding: 160px 0 360px 0;
+    background-image: url(../img/travel-cup.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    .slider-arrows{
+        top: 225px;
+    }
     .title{
         text-transform: uppercase;
         span{
@@ -21,25 +28,69 @@
         }
     } 
 }
-.travel {
-    padding: 160px 0 270px 0;
-    background-image: url(../img/travel-cup.png);
-    background-position: bottom right;
-    background-repeat: no-repeat;
-    .slider-arrows{
-        top: 225px;
-    }
+.travel-grid{
+    display: grid; //aktywuje blokowy grid
+    grid-template-columns: repeat(4, 1fr); //określa kolumny i nazwy przerw między nimi,
+    grid-gap: 20px; //definiuje odległość (odstęp) między rzędami i kolumnami 
+    padding: 0 106px;
 }
-.travel-slider__top {
-    background-repeat: no-repeat;
-    background-position: top left;
-    min-height: 813px;
-    background-size: 90%;
+.wrap-item{
+    display: grid;
+    overflow: hidden;
+    &:nth-child(1){
+        grid-column: 1 / 3;
+    }
+    &:nth-child(4){
+        grid-column: 2 / 4;
+    } 
+    &:nth-child(6){
+        grid-column: 1;
+        grid-row: 2 / 4;
+    }
+    &:nth-child(8){
+        grid-column: 3 / 5;
+    } 
+}
+.travel-grid__item{
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 8px;
+    display: grid;
+    min-height: 32vh;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    align-content: center; 
+    color: #fff;
+    position: relative;
+    transition: all .5s;
+    cursor: pointer;
+    span{
+        z-index: 1;
+    }
+    &:hover{
+        color: $blue;
+        transform: scale(1.1);
+        &::before{
+            opacity: .80;
+        }
+    }
+    &::before{
+        content:'';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #1C2121;
+        opacity: .30;
+        transition: opacity .5s;
+    }
 }
 .travel-slider__subtitle {
     display: flex;
     justify-content: flex-end;
-    padding: 132px 80px 0 0;
+    padding: 132px 106px 0 0;
     margin: 0;
 }
 .subtitle{
@@ -51,7 +102,7 @@
     background-position: right center;
     background-repeat: no-repeat;
     padding: 160px 0px 0px 130px;
-    margin: -230px 0px 0px 0px;
+    margin: -50px 0px 0px 0px;
     .descr__head{
         position: relative;
         padding: 0px 80px 0px 0px;
@@ -63,7 +114,6 @@
     }
 }
 .travel-slider__info {
-    padding: 50px 0px 0px 0px;
     display: flex;
     justify-content: space-around;
     margin: 0;
