fixed  adaptive in header-menu

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -241,7 +241,7 @@ body.lock{
 }
 .slider-item__info{
     position: absolute;
-    right: 80px;
+    right: 106px;
     bottom: 116px;
     text-align: right;
     color: #FFFFFF;
@@ -267,7 +267,7 @@ body.lock{
 }
 .slider-dotshead{
     position: absolute;
-    right: 50px;
+    right: 76px;
     bottom: 40px;
     max-width: 920px;
     width: 100%;
@@ -305,12 +305,12 @@ body.lock{
     max-width: 500px;
     font-family: Fira Sans;
     font-weight: 800;
-    font-size: 200px;
+    font-size: 170px;
     line-height: 156px;
     text-transform: uppercase;
     color: #FFFFFF;
     opacity: 0.07;
-    top: 0;
+    top: 122px;
     left: 23px;
     z-index: 4;
     transform: translateX(-20px);
