--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -16,6 +16,9 @@
         margin-top: 50px;
         margin-bottom: 170px;
     }
+    h3{
+        right: 356px;
+    }
 }
 .map-wrapper{
     background-color: rgba(255, 255, 255, 0.068);
